--- a/src/app/components/nabvar/personal/personal.component.html
+++ b/src/app/components/nabvar/personal/personal.component.html
@@ -18,8 +18,11 @@
         afrontar los retos del futuro.
       </p>
     </div>
-    <button type="button" class="btn btn-light bt-service">
-        <p>DESCUBRE TODOS LOS SERVICIOS</p> 
+    <div class="btn-container">
+      <button type="button" class="btn btn-light bt-service">
+        <a>TODOS LOS SERVICIOS</a> 
 </button>
+    </div>
+
   </div>
   
