--- a/src/app/components/nabvar/personal/personal.component.scss
+++ b/src/app/components/nabvar/personal/personal.component.scss
@@ -22,13 +22,13 @@
     display: flex;               /* Utiliza flexbox para alinear el contenido */
     justify-content: center;     /* Centra el contenido horizontalmente */
     align-items: center;         /* Centra el contenido verticalmente */
-    height: 25px;               /* Ajusta la altura del botón según sea necesario */               /* Elimina el padding interno para evitar que el texto se desplace */
+                         /* Elimina el padding interno para evitar que el texto se desplace */
     border: none;   
     margin-left: 35px;
     border-radius: 0px;
   }
   
-  .bt-service p {
+  .bt-service a {
     font-family: "GutonMed", Georgia;
     font-weight: 600;
     color: rgb(20, 39, 255);
@@ -38,9 +38,10 @@
   }
   @media (min-width: 768px) {
     .image-text {
+     
       flex-wrap: wrap;
       align-content: flex-start;
-      justify-content: flex-end;
+      justify-content: center;
       align-items: center;
       display: flex;              
       width: 100%;                 
@@ -63,6 +64,32 @@
       justify-content: center;
       
     }
-   
-  
+    .btn-container{
+      align-items: center;
+      display: flex;  
+      text-align: center !important; 
+      flex-direction: column;
+     }     
+      .bt-service {
+       
+        justify-content: center;     
+        align-items: center;         /* Alinea verticalmente */
+        height: 80px;                /* Asegúrate de que el botón tenga suficiente altura */
+        padding: 0 20px;             /* Ajusta el padding para dar más espacio a los lados */
+        border: none;   
+        margin-left: 10px;
+            /* Centro el texto */
+      }
+      
+      .bt-service a {
+        font-size: 23px;
+        font-family: "GutonMed", Georgia;
+        font-weight: 600;
+        color: rgb(38, 0, 255);
+        text-decoration: none;       /* Elimina el subrayado en el enlace */
+      }
+      
+      .bt-service a:hover {
+        color: rgb(0, 0, 150);       /* Cambia el color al hacer hover */
+      }
   }
