--- a/src/app/components/nabvar/que-hacemos/nosotros.component.scss
+++ b/src/app/components/nabvar/que-hacemos/nosotros.component.scss
@@ -1,4 +1,3 @@
-
 .accordion-container {
   background-image: url('../../../../assets/contacto mobile.png');
   background-size: cover; /* Ajusta la imagen para que cubra toda el área */
@@ -6,59 +5,79 @@
   padding-top: 10px;
   padding-bottom: 20px;
   color: white;
+ 
+}
+
+.accordion-span {
+  font-size: bold;
+}
+
+.accordion-container h2 {
+ 
   text-align: center;
-  width: 100%;
-  height: 100%;
+  font-family: "GutonSemBd", Georgia;
+  font-size: 50px;
+  margin-top: 5px;
+  margin-bottom: 30px;
 }
 
-
-  .accordion-span{
-    font-size: bold;
-  }
-  .accordion-container h2 {
-    font-family: "GutonSemBd", Georgia; 
-    font-size: 50px;
-    margin-top: 5px;
-    margin-bottom: 30px;
-  }
+.accordion-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 15px;
+  overflow: hidden;
   
-  .accordion-item {
-    margin-left: 10px;
-    margin-bottom: 15px;
-  }
-  
-  .accordion-btn {
-    font-family: "GutonMed", Georgia;
-    background: none;
-    border: none;
-    font-size: 22px;
-    color: white;
-    cursor: pointer;
-    padding: 10px 0;
-    text-align: left;
-   
-    display: flex;
-    margin-left: 15px;
-    transition: color 0.3s ease;
-  }
-  
-  .accordion-btn:hover {
-    color: #f2f2f2;
-  }
-  
-  .accordion-content {
-    max-height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: max-height 0.5s ease, opacity 0.5s ease;
-    -webkit-transition: max-height 0.5s ease, opacity 0.5s ease;
-    -moz-transition: max-height 0.5s ease, opacity 0.5s ease;
-    -ms-transition: max-height 0.5s ease, opacity 0.5s ease;
-    -o-transition: max-height 0.5s ease, opacity 0.5s ease;
+  width: 100%; /* Asegurar que todos los elementos tienen el mismo ancho */
 }
-  p{
-    font-family: "Guton", Georgia;
-  }
+
+.accordion-btn {
+  font-family: "GutonMed", Georgia;
+  background: none;
+  border: none;
+  font-size: 22px;
+  color: white;
+  cursor: pointer;
+  padding: 10px 0;
+  text-align: left;
+  display: flex;
+  align-items: center;
+  padding-left: 70px;
+  
+  transition: color 0.3s ease;
+  width: 100%; /* Asegurar que el botón ocupa todo el ancho */
+  box-sizing: border-box;
+}
+
+.accordion-btn:hover {
+  color: #f2f2f2;
+}
+
+.accordion-content {
+  width: 90%; /* Asegurar que el contenido ocupa todo el ancho */
+  padding-left: 105px;
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: max-height 0.5s ease, opacity 0.5s ease;
+  box-sizing: border-box;
+  
+}
+
+.accordion-content.active {
+  max-height: 100px;
+  opacity: 1;
+}
+
+.accordion-btn i {
+  font-size: 24px;
+  margin-right: 10px;
+}
+
+p {
+  font-family: "Guton", Georgia;
+  display: flex;
+}
 
   .accordion-content.active {
     max-height: 100px; /* Ajusta según el contenido */
@@ -66,20 +85,27 @@
   }
   
   .accordion-btn i {
-
     font-size: 24px;
     margin-right: 10px;
   }
+  .btn-container{
+    display: flex;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+  }
 
   .bt-service {
-    display: flex;               /* Utiliza flexbox para alinear el contenido */
-    justify-content: center;     /* Centra el contenido horizontalmente */
-    align-items: center;         /* Centra el contenido verticalmente */
-    height: 25px;               /* Ajusta la altura del botón según sea necesario */
+        /* Centra el contenido verticalmente */
+    height: 40px;               /* Ajusta la altura del botón según sea necesario */
     padding: 0;                 /* Elimina el padding interno para evitar que el texto se desplace */
     border: none;   
     border-radius: 20px ;
-      margin-left: 10px;
+  
   }
   
   .bt-service a {
@@ -95,9 +121,10 @@
 
 .accordion-btn{
   font-size: 2rem !important;
+  margin-left: 15px !important;
 }
   .accordion-container h2 {
-    font-size: 4rem !important;
+    font-size: 3rem !important;
   }
   .accordion-btn i {
 
@@ -108,20 +135,10 @@
   p{
     font-family: "Guton", Georgia;
     font-size: 1.5rem;
-    display: flex;
-    justify-content: flex-start;
+    padding-left: 20px;
+    
   }
-  .p1{
-  
-    padding-left: 28px;
-  }
-  .p2{
-    padding-left: 58px;
-  }
-  .p3{
-    padding-left: 58px;
-  }
-  
+
   .accordion-content.active {
     max-height: 100px; /* Ajusta según el contenido */
     opacity: 1;
@@ -136,7 +153,7 @@
    
     justify-content: center;     
     align-items: center;         /* Alinea verticalmente */
-    height: 40px;                /* Asegúrate de que el botón tenga suficiente altura */
+    height: 80px;                /* Asegúrate de que el botón tenga suficiente altura */
     padding: 0 20px;             /* Ajusta el padding para dar más espacio a los lados */
     border: none;   
     border-radius: 20px;
