--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -80,11 +80,12 @@
   
   .banner-content {
     position: absolute;
+    left:3%;
     top: 30% !important;
     bottom: 10%;
     color: white;
     text-align: start;
-    padding: 20px;
+    padding: 0px;
 
   }
   
