--- a/src/app/components/nabvar/jefes/jefes.component.html
+++ b/src/app/components/nabvar/jefes/jefes.component.html
@@ -33,27 +33,45 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <div class="team-row">
+    <div class="team-member">
+      <img src="../../../../assets/imagen-persona.jpg" class="rounded-circle" alt="Persona 1">
+      <h3>Leonardo Gimeno</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="team-member">
+      <img src="../../../../assets/imagen-persona.jpg" class="rounded-circle" alt="Persona 2">
+      <h3>Leonardo Gimeno</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+    <div class="team-member">
+      <img src="../../../../assets/imagen-persona.jpg" class="rounded-circle" alt="Persona 3">
+      <h3>Leonardo Gimeno</h3>
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+  </div>
+
   <div class="container">
     <div class="row justify-content-center">
       <h2>Confian en nosotros:</h2>
       <!-- Fila superior con tres imágenes -->
-      <div class="col-4 text-center mb-3">
+      <div class="col-4 col-lg-2 text-center mb-3">
         <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
       </div>
-      <div class="col-4 text-center mb-3">
+      <div class="col-4 col-lg-2 text-center mb-3">
         <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
       </div>
-      <div class="col-4 text-center mb-3">
+      <div class="col-4 col-lg-2  text-center mb-3">
         <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
       </div>
     </div>
     
     <div class="row justify-content-center">
       <!-- Fila inferior con dos imágenes -->
-      <div class="col-6 text-center mb-3">
+      <div class="col-4 col-lg-2  text-center mb-3">
         <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
       </div>
-      <div class="col-6 text-center mb-3">
+      <div class="col-4 col-lg-2  text-center mb-3">
         <img src="./../../../../assets/imagen-persona.jpg" class="img-fluid rounded-circle" alt="Persona 5">
       </div>
     </div>
