--- a/src/app/components/nabvar/jefes/jefes.component.scss
+++ b/src/app/components/nabvar/jefes/jefes.component.scss
@@ -1,48 +1,158 @@
-.carousel{
-  padding: 40px;
+.team-member {
+  transition: transform 0.3s ease;
+  position: relative; /* Necesario para el z-index */
+  z-index: 1; /* Controlar la superposición */
+  text-align: center;
+}
+.container{
+  background-color: #1525EA;
+  width: 100%;
+  max-width: 100%;
 }
 
-.team-member {
-  text-align: center;
-  transition: transform 0.3s ease;
-}
 
 .team-member img {
   width: 150px;
   height: 150px;
-  object-fit: cover;
   transition: transform 0.3s ease;
 }
 
 
-.team-member h3 {
-  font-family: "GutonMed", Georgia;
-  font-weight: 600;
-  font-size: 1.7rem;
-  margin-top: 10px;
-}
+@media (min-width: 769px) {
+  .carousel {
+    visibility: hidden; /* Ocultar el carrusel en escritorio */
+    position: absolute; 
+    top: -9999px;
+    left: -9999px;
+  }
 
-.team-member p {
-  font-family: "Guton", Georgia;
-  font-size: 1rem;
- 
-}
+  .carousel {
+    visibility: hidden; /* Ocultar el carrusel en escritorio */
+    position: absolute; 
+    top: -9999px;
+    left: -9999px;
+  }
 
-.carousel-control-prev-icon, .carousel-control-next-icon {
-  background-color: rgba(0, 0, 0, 0.5); /* Hace que los íconos de navegación sean más visibles */
-  opacity: 0;
-}
+  .team-row {
+    padding: 50px;
+    visibility: visible;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+    
+  }
+  .team-member h3 {
+    font-family: "GutonMed", Georgia;
+    font-weight: 600;
+    font-size: 1.7rem;
+    margin-top: 10px;
+  }
 
-.container{
-  padding: 50px;
-  background-color: #1525EA
-  ;
-}
+  .team-member p {
+    font-family: "Guton", Georgia;
+    font-size: 1.3 rem;
+   
+  }
+  /* Imágenes laterales por defecto */
+  .team-row .team-member {
+    width: 150px; /* Tamaño por defecto para las imágenes laterales */
+    transition: transform 0.6s ease, z-index 0.3s ease;
+    z-index: 1; /* Para asegurarse de que el hover las lleve al frente */
+  }
 
+  /* Imagen del medio más alta por defecto */
+  .team-row .team-member:nth-child(2) {
+    width: 200px; /* Imagen central más grande */
+    z-index: 2; /* Para mantenerla por encima de las otras por defecto */
+  }
+
+  /* Efecto de hover: las imágenes crecen y toman el centro */
+  .team-row .team-member:hover {
+    transform: scale(1.2); /* Agrandar la imagen al pasar el mouse */
+    z-index: 3; /* Traer la imagen al frente */
+  }
+
+  /* Las imágenes que no están en hover se achican y se reordenan */
+  .team-row .team-member:not(:hover) {
+    transform: scale(1); /* Achicar imágenes no seleccionadas */
+  }
+
+  /* Tamaño de las imágenes */
+  .team-row .team-member img {
+    width: 100%;
+    height: auto;
+  }
+  .container{
+    background-color: #1525EA;
+  }
+  
+  h2{
+    padding: 20px;
+    font-family: "GutonMed", Georgia;
+    font-weight: 600;
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 20px;
+    font-size: 3rem;
+  }
+  .img-fluid{
+  
+    height: 180px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+  }
+ }
 
 
 @media (max-width: 768px) {
+  .team-row {
+    visibility: hidden; /* Ocultar las imágenes alineadas en móviles */
+    position: absolute; 
+    top: -9999px;
+    left: -9999px;
+  }
+  .carousel{
+    padding: 40px;
+  }
+  
+  .team-member {
+    text-align: center;
+    transition: transform 0.3s ease;
+  }
+  
+  .team-member img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    transition: transform 0.3s ease;
+  }
+  
+  
+  .team-member h3 {
+    font-family: "GutonMed", Georgia;
+    font-weight: 600;
+    font-size: 1.7rem;
+    margin-top: 10px;
+  }
+  
+  .team-member p {
+    font-family: "Guton", Georgia;
+    font-size: 1rem;
+   
+  }
+  
+  .carousel-control-prev-icon, .carousel-control-next-icon {
+    background-color: rgba(0, 0, 0, 0.5); /* Hace que los íconos de navegación sean más visibles */
+    opacity: 0;
+  }
+  
+
   h2{
+    padding: 20px;
     font-family: "GutonMed", Georgia;
     font-weight: 600;
     display: flex;
@@ -51,7 +161,7 @@
     flex-direction: column;
     padding-bottom: 20px;
   }
-  img {
+  .img-fluid{
     width: 100px;
     height: 100px;
     object-fit: cover;
