--- a/src/app/components/nabvar/menu-item/menu-item.component.html
+++ b/src/app/components/nabvar/menu-item/menu-item.component.html
@@ -5,7 +5,7 @@
     <div class="col-md-3 card-container" *ngFor="let card of cards; let i = index">
       <div class="card  shadow-sm h-100">
         <div class="card-body d-flex flex-column">
-          <h5 class="card-title">{{ card.title }}</h5>
+          <h5 class="card-title"[innerHTML]="card.title">{{ card.title }}</h5>
           <p class="card-text">{{ card.text }}</p>
         </div>
       </div>
@@ -22,7 +22,7 @@
       >
         <div class="card  shadow-sm mx-auto">
           <div class="card-body">
-            <h5 class="card-title">{{ card.title }}</h5>
+            <h5 class="card-title"[innerHTML]="card.title">{{ card.title }}</h5>
             <p class="card-text">{{ card.text }}</p>
           </div>
         </div>
