--- a/src/app/components/nabvar/procesos/procesos.component.html
+++ b/src/app/components/nabvar/procesos/procesos.component.html
@@ -17,7 +17,7 @@
                 <div class="card-body h-100">
                   <h1 class="step-number">1</h1>
                   <h4>Análisis <br>y diagnóstico</h4>
-                  <p>Estudio de los sistemas de OT y ciberseguridad al detalle.</p>
+                  <p>Estudio detallado de los sistemas de OT y ciberseguridad.</p>
                 </div>
               </div>
             </div>
@@ -26,7 +26,7 @@
                 <div class="card-body">
                   <h1 class="step-number">2</h1>
                   <h4>Implementación de soluciones</h4>
-                  <p>Adaptación de tecnologías para optimización y seguridad.</p>
+                  <p>Adaptación de tecnologías avanzadas para optimización y seguridad.</p>
                 </div>
               </div>
             </div>
@@ -41,7 +41,7 @@
                 <div class="card-body">
                   <h1 class="step-number">2</h1>
                   <h4>Implementación de soluciones</h4>
-                  <p>Adaptación de tecnologías para optimización y seguridad.</p>
+                  <p>Adaptación de tecnologías avanzadas para optimización y seguridad.</p>
                 </div>
               </div>
             </div>
@@ -49,8 +49,8 @@
               <div class="card process-step">
                 <div class="card-body">
                   <h1 class="step-number">3</h1>
-                  <h4>Seguimiento <br>y soporte</h4>
-                  <p>Monitoreo continuo para garantizar la efectividad y seguridad.</p>
+                  <h4>Monitoreo <br>y soporte continuo</h4>
+                  <p>Garantizamos la protección y eficiencia de tus sistemas 24/7.</p>
                 </div>
               </div>
             </div>
@@ -64,8 +64,8 @@
               <div class="card process-step">
                 <div class="card-body">
                   <h1 class="step-number">3</h1>
-                  <h4>Seguimiento <br>y soporte</h4>
-                  <p>Monitoreo continuo para garantizar la efectividad y seguridad.</p>
+                  <h4>Monitoreo <br>y soporte continuo</h4>
+                  <p>Garantizamos la protección y eficiencia de tus sistemas 24/7.</p>
                 </div>
               </div>
             </div>
