--- a/src/app/components/nabvar/contact/contact.component.html
+++ b/src/app/components/nabvar/contact/contact.component.html
@@ -1,6 +1,6 @@
 
    <div class="blank"></div>
-    <div class="contact-form-container">
+    <div id="contact" class="contact-form-container">
       <h1>TRABAJEMOS <br>JUNTOS</h1>
       <div class="contact-form">
         <form (ngSubmit)="enviarConsulta(contactForm)" #contactForm="ngForm" novalidate>
