--- a/src/app/components/nabvar/jefes/jefes.component.html
+++ b/src/app/components/nabvar/jefes/jefes.component.html
@@ -33,7 +33,7 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
-  <div class="team-row">
+  <div id="teamRow" class="team-row">
     <div class="team-member">
       <img src="../../../../assets/imagen-persona.jpg" class="rounded-circle" alt="Persona 1">
       <h3>Leonardo Gimeno</h3>
