--- a/src/app/components/nabvar/personal/personal.component.html
+++ b/src/app/components/nabvar/personal/personal.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="btn-container">
       <button type="button" class="btn btn-light bt-service">
-        <a>TODOS LOS SERVICIOS</a> 
+        <a routerLink='/servicios'>TODOS LOS SERVICIOS</a> 
 </button>
     </div>
 
