--- a/src/app/components/seccion2/seccion2.component.scss
+++ b/src/app/components/seccion2/seccion2.component.scss
@@ -1,236 +1,162 @@
-/* Estilos generales para la sección */
-#equipo {
-  background: linear-gradient(to right, blue, rgb(152, 167, 241), rgb(185, 240, 255)); /* Gradiente de azul a celeste */
-  overflow: hidden;
-  z-index: 0; /* Fondo detrás del contenido */
-  position: relative;
-}
-.black-stripe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: radial-gradient(circle at 5% 5%, rgba(0, 0, 0, 1 ) 15%, rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0) 70%);
-  mix-blend-mode: multiply; /* Mezclar el fondo para que se integre mejor *
-  pointer-events: none; /* No interferir con los elementos interactivos */
-  z-index: -1; /* Colocar la franja negra detrás del contenido */
-}
+@media (max-width: 360px) {
  
+  .seccion1 {
+    background-image: url('../../../assets/contacto mobile.png');
+    background-size: cover;
+    background-position: center;
+    padding-top: 15vh;
+    padding-bottom: 20px;
+    color: white;
+    position: relative;
+    max-width: 100vw;
+    overflow-x: hidden;
 
+    .content {
+      height: 100vh;
+      padding: 0 20px;
+      max-width: 100%;
+    }
 
-  h2 {
-      text-align: center;
-      color: #ffffff; 
-      font-size: 2.5rem;
-      font-weight: bold;
-      letter-spacing: 1px;
+    .info {
+      font-family: "Guton", Georgia;
+      font-weight: 400;
+      font-size: 16pt;
+      letter-spacing: 0.1em;
       text-transform: uppercase;
-      margin-bottom: 30px;
-      position: relative;
-      display: inline-block;
-  }
-
-  .container{
-    background: linear-gradient(to right, rgb(0, 21, 255,0.1), rgb(0, 0, 0));
-    margin-top: 80px;
-    padding-top: 10px;
-    width: 100%;
+      margin-bottom: 5px;
+      line-height: 50pt;
+    }
+  .tittle {
+    font-family: "Guton";
+    font-weight: bold;
+    font-size: 30pt;
+    line-height: 50pt;
+    text-align: left;
+    margin: 10px 0;
+    word-wrap: break-word;
+    word-break: break-word;
     max-width: 100%;
-
-  }
-  .intro-text {
-    font-size: 1.5rem;
-    color: #ffffff;
-    align-items: start;
-    margin-bottom: 100px;
-    
   }
 
-  .team-details {
-    list-style-type: none;
-    padding-right: 10px;
-    color: #d2d2d2 ;
-    text-align: justify ; 
-    
-    li {
-      display: flex;
-      align-items: baseline; // Alinea el texto del título con el texto de la descripción
-      margin-bottom: 0.5rem; // Espaciado entre elementos
-      text-align: start; 
+  .text {
+    font-size: 16pt;
+    line-height: 22pt;
+  }
+}
+}
 
-      strong {
+@media (max-width: 768px) and (min-width: 361px) {
+  .seccion1 {
+    background-image: url('../../../assets/contacto mobile.png');
+    background-size: cover;
+    background-position: center;
+    padding-top: 15vh;
+    padding-bottom: 20px;
+    color: white;
+    position: relative;
+    max-width: 100vw;
+    overflow-x: hidden;
 
-        color: #ffffff;
-        min-width: 200px; // Ajusta el ancho mínimo del título para alinear los textos
-        display: inline-block; // Asegura que todos los títulos ocupen el mismo ancho
-        text-align: right; // Alinea el texto a la izquierda
-        padding-right: 20px;
-    
-      }
-  
-      p {
-        text-align: right;
-        flex-grow: 1; // Permite que el texto ocupe el resto del espacio disponible
-        margin-left: 0.5rem; // Añade un pequeño espacio entre el título y la descripción
-     
-      }
+    .content {
+      padding: 0 22px;
+      max-width: 100%;
+    }
+
+    .info {
+      font-family: "Guton", Georgia;
+      font-weight: 400;
+      font-size: 16pt;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      margin-bottom: 5px;
+      line-height: 50pt;
+    }
+
+    .tittle {
+      font-family: "Guton";
+      font-weight: bold;
+      font-size: 33pt;
+      line-height: 50pt;
+      text-align: left;
+      margin: 10px 0;
+      word-wrap: break-word;
+      word-break: break-word;
+      max-width: 100%;
+    }
+
+    .text {
+      font-family: "Guton", Georgia;
+      font-weight: 400;
+      font-size: 18pt;
+      line-height: 27pt;
+      text-align: left;
+      margin-top: 10px;
+      margin-bottom: 7rem;
     }
   }
+  .seccion2 {
+    background: blue;
+    color: white;
+    text-align: center;
+    max-width: 100%;
+    position: relative;
+  }
   
 
-  .row {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center; /* Centra horizontalmente */
-      align-items: center; /* Centra verticalmente */
-  }
-
-  .col-md-2 {
-    display: flex;
-    justify-content: center; /* Centra las cartas dentro de la columna */
-    margin: 0 10px; /* Añade un poco de margen lateral para que las columnas no se agrupen */
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .card {
+  .cta-button {
+    background-color: white;
+    color: #1f2cd6;
+  font-family: "GutonMed";
     
-    height: auto; /* Altura automática para adaptarse al contenido */
-    margin: 1rem;
-    perspective: 1000px;
-    background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 10px; /* Mejora las esquinas redondeadas */
-  }
-  
-  .card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  
-  .card-front {
-    position: relative;
-    width: 100%;
-    height: auto; /* Altura automática para adaptarse al contenido */
-    backface-visibility: hidden;
+    padding: 10px 20px;
+    font-size: 16px;
+    line-height: 22pt; /* Interlineado */
+    letter-spacing: 0.1em; /* Kerning */
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start; /* Asegura que los elementos comiencen desde la parte superior */
-    border: 1px solid rgba(0, 0, 0, 0.2);;
-    border-radius: 5px;
-    overflow: hidden;
-    padding: 1rem;
+    text-align: center;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   }
   
-  .card-front h5 {
-    margin-bottom: 1rem; /* Espacio debajo del nombre */
-    color:#ffffff;
-    text-align: center; /* Centra el nombre */
+  .arrow {
+    font-size: 22px; /* Tamaño de la flecha */
+    margin-top: -10px; /* Espacio entre texto y flecha */
   }
   
-  .card-front img {
-    width: 100%;
-    height: auto;
-    border-bottom-left-radius: 8px; /* Coincide con las esquinas redondeadas */
-    border-bottom-right-radius: 8px;
-    object-fit: cover;
-    margin-bottom: 1rem; /* Espacio entre la imagen y el cargo */
+  .icon {
+    width: 80px;
+    margin: 20px auto;
   }
   
-  .cargo {
-    font-size: 1.3rem !important;
-    margin-bottom: 0.5rem; /* Espacio entre el cargo y la descripción */
-    color: #d2d2d2;
-    text-align: center; /* Centra el cargo */
+  .title {
+    font-family: "Guton", Georgia, serif;
+    font-size: 24px;
+    font-weight: bold;
+    margin: 10px 0;
+    line-height: 1.2;
   }
   
-  .descripcion {
-    font-size: 1rem;
-    text-align: center; /* Centra la descripción */
-    margin-bottom: 0; /* Evita márgenes adicionales */
-    color: #d2d2d2;
-  }
-  
-  
-  
-  h2 {
-    font-size: 2.5rem; /* Ajusta el tamaño del título */
-  }
-  
-  p {
-    font-size: 1.2rem; /* Ajusta el tamaño del párrafo */
+  .description {
+    font-family: "Guton", Georgia, serif;
+    font-size: 14px;
     margin-top: 15px;
   }
-    @media (min-width: 769px) {
-        #read-more-btn {
-          display: none;
-        }
- }
-
-  @media (max-width: 768px) {
-    .container{
-      background-color: rgba(0, 0, 0, 0.8); 
-    }
-      .intro-text {
-        font-size: 20px;
-        line-height: 1.5em;
-        margin-bottom: 15px;
-        color: #d2d2d2;
-        text-align: center ; 
-        
-      }
-      
-      .team-details {
-        list-style: none;
-        padding-left: 0;
-        font-size: 14px;
-        max-height: 0;
-        overflow: hidden;
-        opacity: 0;
-        transition: max-height 2s ease, opacity 2s ease;
-        -webkit-transition: max-height 2s ease, opacity 2s ease;
-        -moz-transition: max-height 2s ease, opacity 2s ease;
-        -ms-transition: max-height 2s ease, opacity 2s ease;
-        -o-transition: max-height 2s ease, opacity 2s ease;
-}
-      
-      .team-details li {
-        margin-bottom: 15px;
-        padding: 10px;
-        border-bottom: 1px solid rgb(0, 0, 0,0.8);
-      }
-      
-      .team-details li strong {
-        display: block;
-        font-weight: bold;
-        margin-bottom: 5px;
-        color: #ffffff;
-      }
-      
-      .team-details li span {
-        display: block;
-        color: #d2d2d2;
-      }
-      
-      #read-more-btn {
-        display: inline-block;
-        margin-bottom: 10px;
-        background-color: #000000;
-        color: #ffffff;
-        border: none;
-        padding: 10px 20px;
-        font-size: 14px;
-        cursor: pointer;
-        border-radius: 5px;
-      }
-      
-      .show-content {
-        max-height: 700px; /* Ajusta este valor según el contenido */
-        opacity: 1;
-      }
-      .card{
-        background-color: rgba(0, 0, 0, 0.8 ); 
-      }
-    
+  
+  .features {
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+    font-size: 14px;
+    line-height: 1.5;
   }
+  
+  .features li::before {
+    content: "• "; /* Agrega el punto como marcador */
+    color: #1f2cd6;
+  }
+}
+
