--- a/src/app/components/seccion2/seccion2.component.html
+++ b/src/app/components/seccion2/seccion2.component.html
@@ -1,33 +1,125 @@
 <div class="seccion1">
-  <div class="content">  
-  <p class="info">NUESTROS SERVICIOS</p>
-  <H1 class="tittle">Automatizamos <br> y protegemos <br> tu industria</H1>
-  <p class="text">
-    En Salem combinamos <strong>ciberseguridad</strong> de alto nivel y <strong>consultoría en
-      automatización</strong> para transformar digitalmente los sectores más exigentes: <strong>Oil
-        & Gas, minería, y generación eléctrica.</strong> Nuestros servicios garantizan la
-    <strong>eficiencia</strong>, la  <strong>protección</strong> y la <strong>optimización</strong> de tus procesos industriales.
-  </p>
+  <div class="content">
+    <p class="info">NUESTROS SERVICIOS</p>
+    <H1 class="tittle"
+      >Automatizamos <br />
+      y protegemos <br />
+      tu industria</H1
+    >
+    <p class="text">
+      En Salem combinamos <strong>ciberseguridad</strong> de alto nivel y
+      <strong>consultoría en automatización</strong> para transformar
+      digitalmente los sectores más exigentes:
+      <strong>Oil & Gas, minería, y generación eléctrica.</strong> Nuestros
+      servicios garantizan la <strong>eficiencia</strong>, la
+      <strong>protección</strong> y la <strong>optimización</strong> de tus
+      procesos industriales.
+    </p>
+  </div>
 </div>
-</div> 
 
 <div class="seccion2">
   <div class="cta-button">
-    CONECTÁ CON EXPERTOS 
-     <span class="arrow">→</span>
-  
+    CONECTÁ CON EXPERTOS
+    <span class="arrow">→</span>
   </div>
+  <img
+    src="../../../assets/Candado.png"
+    alt="Icono de seguridad"
+    class="icon"
+  />
   <div class="content">
-    <img src="../../../assets/Candado.png" alt="Icono de seguridad" class="icon">
-    <h2 class="title">Ciberseguridad OT <br> y Defensa Avanzada</h2>
+    <h2 class="title">
+      Ciberseguridad OT <br />
+      y Defensa Avanzada
+    </h2>
     <p class="description">
-      Protege tus sistemas críticos contra amenazas globales con nuestras soluciones de ciberseguridad OT. Nos aliamos con Dragos, líder mundial en defensa de infraestructuras estratégicas, para ofrecerte:
+      Protege tus sistemas críticos contra amenazas globales con nuestras
+      soluciones de ciberseguridad OT. Nos aliamos con Dragos, líder mundial en
+      defensa de infraestructuras estratégicas, para ofrecerte:
     </p>
-    <ul class="features">
-      <li>Detección y respuesta temprana ante ataques cibernéticos.</li>
-      <li>Plataforma inteligente para gestión de amenazas.</li>
-      <li>Seguridad proactiva y protección integral para tecnologías de operación.</li>
-    </ul>
+    <div class="features">
+      <p>
+        Detección y respuesta temprana ante ataques cibernéticos. <br />
+        Plataforma inteligente para gestión de amenazas. <br />
+        Seguridad proactiva y protección integral para tecnologías de operación.
+      </p>
+    </div>
   </div>
-
 </div>
+<div class="seccion3">
+  <img src="../../../assets/Tuerca.png" alt="Icono de seguridad" class="icon" />
+  <div class="content">
+    <h2 class="title">
+      Consultoría en Automatización y Optimización de Procesos
+    </h2>
+    <p class="description">
+      Maximiza la eficiencia de tus operaciones con nuestras soluciones a
+      medida:
+    </p>
+    <div class="features">
+      <p>
+        Diseño e implementación de automatización industrial. Optimización de
+        procesos de negocio con tecnologías de vanguardia. Integración de
+        inteligencia artificial y análisis de datos para resultados óptimos.
+      </p>
+    </div>
+  </div>
+</div>
+<div class="seccion4">
+  <img src="../../../assets/Nube.png" alt="Icono de seguridad" class="icon" />
+  <div class="content">
+    <h2 class="title">Soluciones Avanzadas en Transformación Digital</h2>
+    <p class="description">
+      Lidera el cambio hacia un futuro más sostenible y eficiente:
+    </p>
+    <div class="features">
+      <p>
+        Implementación de tecnologías innovadoras como inteligencia artificial,
+        computación cuántica y análisis predictivo. Reducción de costos
+        operativos y mejora continua mediante automatización avanzada.
+        Adaptación tecnológica personalizada para las necesidades específicas de
+        tu industria.
+      </p>
+    </div>
+  </div>
+</div>
+<div class="seccion5">
+  <div class="content">
+    <h1 class="title">¿QUÉ NOS HACE DIFERENTES?</h1>
+    <p class="description">
+      Alianzas Estratégicas: <br />
+      En colaboración con Dragos, líder en ciberseguridad OT, ofrecemos
+      soluciones avaladas por su experiencia reconocida globalmente. <br />
+      <br />
+      Multidisciplinariedad: <br />
+      Combinamos conocimiento en automatización, ciberseguridad y transformación
+      digital para ofrecerte un servicio integral. <br />
+      <br />
+      Innovación Constante: <br />
+      Nos adelantamos al futuro con tecnologías avanzadas como IA y computación
+      cuántica.
+    </p>
+  </div>
+</div>
+<div class="seccion6">
+  <div class="content">
+    <p class="description">
+      Con más de 20 años de experiencia
+      acumulada en diversas industrias,
+      en Salem Technologies SAS
+      entendemos la importancia de
+      proteger y optimizar los activos
+      más valiosos de tu negocio.
+      Nuestra prioridad es ofrecerte
+      soluciones confiables, sostenibles
+      y seguras que impulsen tu
+      crecimiento en un mundo digital.
+    </p>
+  </div>
+  <div class="cta-button2">
+    ¿TENES UN PROYECTO?
+  </div>
+</div>
+
+<app-contact></app-contact>
