--- a/src/app/components/nabvar/personal/personal.component.scss
+++ b/src/app/components/nabvar/personal/personal.component.scss
@@ -1,100 +1,93 @@
-.image-text{
-    color: white;
-    background-color: black;
-    padding-bottom: 30px;
+.image-text {
+  color: white;
+  background-color: black;
+  padding-bottom: 30px;
 }
 
-.image{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 20px;
-  }
-  .text{
-   
-    font-family: "Guton", Georgia;
-    padding: 25px 19px 15px 35px;
-    font-weight: 400;
-    font-size:1.3rem ;
-  }
-  .btn-container{
-    align-items: center;
-    display: flex;  
-    text-align: center !important; 
-    flex-direction: column;
-   }     
-  .bt-service {
-height: 40px;               /* Ajusta la altura del botón según sea necesario */
-padding: 0;                 /* Elimina el padding interno para evitar que el texto se desplace */
-border: none;   
-border-radius: 20px ;
-
+.image {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 20px;
+}
+.text {
+  font-family: "Guton", Georgia;
+  padding: 25px 19px 15px 35px;
+  font-weight: 400;
+  font-size: 1.3rem;
+}
+.btn-container {
+  align-items: center;
+  display: flex;
+  text-align: center !important;
+  flex-direction: column;
+}
+.bt-service {
+  height: 40px; /* Ajusta la altura del botón según sea necesario */
+  padding: 0; /* Elimina el padding interno para evitar que el texto se desplace */
+  border: none;
+  border-radius: 20px;
 }
 
 .bt-service a {
-font-family: "GutonMed", Georgia;
-font-weight: 500;
-color: rgb(38, 0, 255);
-margin-left: 20px;
-margin: 0;                  /* Elimina el margen del párrafo */
-white-space: nowrap;
-padding:10px 20px 10px 20px;        /* Evita que el texto se divida en múltiples líneas */
+  text-decoration: none;
+  font-family: "GutonMed", Georgia;
+  font-weight: 500;
+  color: rgb(38, 0, 255);
+  margin-left: 20px;
+  margin: 0; /* Elimina el margen del párrafo */
+  white-space: nowrap;
+  padding: 10px 20px 10px 20px; /* Evita que el texto se divida en múltiples líneas */
 }
-  @media (min-width: 768px) {
-    .image-text {
-     
-      flex-wrap: wrap;
-      align-content: flex-start;
-      justify-content: center;
-      align-items: center;
-      display: flex;              
-      width: 100%;                 
-     
-    }
-    
-    .image {
-      width: 55%;                 
-      height: auto;                 
-      object-fit: cover;   
-          
-    }
-    .text{
-      font-size: 26px;
-      padding: 1px;
-      width: 45%;
-      font-family: "GutonMed", Georgia;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      
-    }
-    .btn-container{
-      align-items: center;
-      display: flex;  
-      text-align: center !important; 
-      flex-direction: column;
-     }     
-     .bt-service {
-   
-      justify-content: center;     
-      align-items: center;         /* Alinea verticalmente */
-      height: 80px;                /* Asegúrate de que el botón tenga suficiente altura */
-      padding: 0 20px;             /* Ajusta el padding para dar más espacio a los lados */
-      border: none;   
-      border-radius: 20px;
-      margin-left: 10px;
-          /* Centro el texto */
-    }
-    
-    .bt-service a {
-      font-family: "GutonMed", Georgia;
-      font-weight: 500;
-      color: rgb(38, 0, 255);
-      text-decoration: none;       /* Elimina el subrayado en el enlace */
-    }
-    
-    .bt-service a:hover {
-      color: rgb(0, 0, 150);       /* Cambia el color al hacer hover */
-    }
-   
+@media (min-width: 768px) {
+  .image-text {
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 100%;
   }
+
+  .image {
+    width: 55%;
+    height: auto;
+    object-fit: cover;
+  }
+  .text {
+    font-size: 26px;
+    padding: 1px;
+    width: 45%;
+    font-family: "GutonMed", Georgia;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .btn-container {
+    align-items: center;
+    display: flex;
+    text-align: center !important;
+    flex-direction: column;
+  }
+  .bt-service {
+    justify-content: center;
+    align-items: center; /* Alinea verticalmente */
+    height: 80px; /* Asegúrate de que el botón tenga suficiente altura */
+    padding: 0 20px; /* Ajusta el padding para dar más espacio a los lados */
+    border: none;
+    border-radius: 20px;
+    margin-left: 10px;
+    /* Centro el texto */
+  }
+
+  .bt-service a {
+    font-family: "GutonMed", Georgia;
+    font-weight: 500;
+    color: rgb(38, 0, 255);
+    text-decoration: none; /* Elimina el subrayado en el enlace */
+  }
+
+  .bt-service a:hover {
+    color: rgb(0, 0, 150); /* Cambia el color al hacer hover */
+  }
+}
